<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DailyBook</string>
    <string name="dailybook" translatable="false">DailyBook</string>
    <string name="made_in_india">Made in India 🇮🇳</string>
    <string name="enter_mobile_number">Enter your Mobile number</string>
    <string name="login_number_hint">Mobile Number</string>
    <string name="login_number_prefix">+91</string>
    <string name="get_otp">Get OTP</string>
    <string name="or_with">or continue with</string>
    <string name="login_with_truecaller">Login with truecaller</string>
    <string name="terms_and_conditions">By continuing you agree that you have read and accepted our <font color="#3270D2">Terms &amp; Conditions</font> and <font color='#3270D2'>Privacy Policy.</font></string>
    <string name="back">Back</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_has_been_sent_to">OTP has been sent to</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="resend_otp">Haven\'t received OTP? <font color="#3270D2"><u>Resend</u></font></string>
    <string name="_100_secure_data">100% Secure data</string>
    <string name="daily_attendance">Daily attendance</string>
</resources>
