<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".screen.login.view.LoginFragment">

    <ImageView
        android:id="@+id/iv_visual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:src="@drawable/visual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_daily_attendance"/>

    <com.boilerplate.uikit.views.textviews.text24.TextViewBoldWhite24
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.boilerplate.uikit.views.textviews.text16.TextViewBoldWhite16
        android:id="@+id/tv_made_in_india"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/made_in_india"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.boilerplate.uikit.views.textviews.text24.TextViewBoldYellow24
        android:id="@+id/tv_daily_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/daily_attendance"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_secure" />

    <com.boilerplate.uikit.views.textviews.text12.TextViewWhiteRegular12
        android:id="@+id/tv_secure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="@string/_100_secure_data"
        android:textColor="@color/white"
        android:gravity="center"
        android:drawablePadding="@dimen/margin_4"
        android:drawableStart="@drawable/ic_secure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cv_login" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/background"
        app:shapeAppearanceOverlay="@style/TopCornersCurved">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_16"
            android:paddingHorizontal="@dimen/margin_12"
            android:background="@color/background">

            <com.boilerplate.uikit.views.textviews.text20.TextViewBold20
                android:id="@+id/tv_enter_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/enter_mobile_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_login"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_10"
                app:endIconDrawable="@drawable/ic_clear_search"
                app:endIconMode="clear_text"
                android:hint="@string/login_number_hint"
                app:hintTextColor="?attr/hintTextColor"
                app:endIconTint="@null"
                app:boxCornerRadiusBottomStart="@dimen/margin_100"
                app:boxCornerRadiusBottomEnd="@dimen/margin_100"
                app:boxCornerRadiusTopEnd="@dimen/margin_100"
                app:boxCornerRadiusTopStart="@dimen/margin_100"
                app:layout_constraintTop_toBottomOf="@id/tv_enter_mobile_number"
                app:prefixText="@string/login_number_prefix"
                app:prefixTextAppearance="@style/textview_14"
                app:prefixTextColor="?attr/text14Color"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number"
                    style="@style/textview_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    tools:text="839349595" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.boilerplate.uikit.views.buttons.PrimaryButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/til_phone_number"
                app:layout_constraintBottom_toBottomOf="@+id/til_phone_number"
                android:text="@string/get_otp" />

            <com.boilerplate.uikit.views.textviews.text14.TextViewRegular14
                android:id="@+id/tv_or_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_phone_number"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/or_with"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/btn_tc_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:padding="@dimen/margin_16"
                android:visibility="gone"
                android:background="@drawable/rounded_white_blue_corner_100"
                android:src="@drawable/ic_truecaller"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_or_with"
                android:contentDescription="@string/login_with_truecaller"/>

            <com.boilerplate.uikit.views.textviews.text10.TextViewRegular10
                android:id="@+id/tv_terms_and_conditions"
                android:layout_width="@dimen/margin_240"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_10"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_tc_login"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>